--- a/traffic_violations/traffic_violations/templates/list_official.html
+++ b/traffic_violations/traffic_violations/templates/list_official.html
@@ -29,7 +29,7 @@
                     <a class="nav-link active" aria-current="page" href="#">Vehicle</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="{% url 'list_official' %}">Official</a>
+                    <a class="nav-link" href="#">Official</a>
                 </li>
             </ul>
         </div>
@@ -39,20 +39,20 @@
 <div class="container py-4">
     <div class="row">
         <div class="col-md-4">
-            <h2>Add person</h2>
+            <h2>Add new official</h2>
             <div class="card">
                 <div class="card body">
-                    <form action="/addPerson/" method="POST">
+                    <form action="/addOfficial/" method="POST">
                         {% csrf_token %}
                         <div class="form-group">
                             <input type="text" name="name" placeholder="enter name" class="form-control">
                         </div>
                         <div class="form-group">
-                            <input type="text" name="email" placeholder="enter email" class="form-control">
+                            <input type="text" name="number" placeholder="enter number" class="form-control">
                         </div>
                         <br>
                         <div class="form-group">
-                            <button type="submit" class="btn btn-success btn-block">Add person</button>
+                            <button type="submit" class="btn btn-success btn-block">Add Official</button>
                         </div>
                     </form>
                 </div>
@@ -60,13 +60,13 @@
             </div>
         </div>
         <div class="col-md-8">
-            <h2>List of person with traffic violations</h2>
+            <h2>List of Official</h2>
             <div class="table-responsive">
                 <table class="table table-striped">
                     <thead>
                         <tr>
                             <th>Name</th>
-                            <th>Email</th>
+                            <th>Id numer</th>
                             <th>Actions</th>
                         </tr>
                     </thead>
@@ -74,12 +74,13 @@
                         {% for data in dataset %}
                         <tr>
                             <td>{{ data.name }}</td>
-                            <td>{{ data.email }}</td>
+                            <td>{{ data.id_number }}</td>
                             <td>
-                                <a href="edit/{{data.id}}" class="btn btn-sm btn-block btn-primary">Edit</a>
+                                <a href="editOfficial/{{data.id}}" class="btn btn-sm btn-block btn-primary">Edit</a>
                             </td>
                             <td>
-                                <a href="delete/{{data.id}}" class="btn btn-sm btn-block btn-danger">Delete </a>
+                                <a href="{% url 'delete_official' data.id %}"
+                                    class="btn btn-sm btn-block btn-danger">Delete </a>
                             </td>
                         </tr>
                         {% endfor %}
