--- a/traffic_violations/traffic_violations/templates/update_persons.html
+++ b/traffic_violations/traffic_violations/templates/update_persons.html
@@ -29,13 +29,9 @@
                     <a class="nav-link active" aria-current="page" href="#">Vehicle</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Official</a>
+                    <a class="nav-link" href="{% url 'list_official' %}">Official</a>
                 </li>
             </ul>
-            <form class="d-flex" role="search">
-                <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                <button class="btn btn-outline-success" type="submit">Search</button>
-            </form>
         </div>
     </div>
 </nav>
