--- a/traffic_violations/traffic_violations/templates/list_official.html
+++ b/traffic_violations/traffic_violations/templates/list_official.html
@@ -26,7 +26,7 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                 <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="#">Vehicle</a>
+                    <a class="nav-link active" aria-current="page" href="{% url 'list_vehicle' %}">Vehicle</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#">Official</a>
