--- a/traffic_violations/traffic_violations/templates/list_vehicle.html
+++ b/traffic_violations/traffic_violations/templates/list_vehicle.html
@@ -39,20 +39,26 @@
 <div class="container py-4">
     <div class="row">
         <div class="col-md-4">
-            <h2>Add person</h2>
+            <h2>Add new Vehicle</h2>
             <div class="card">
                 <div class="card body">
-                    <form action="/addPerson/" method="POST">
+                    <form action="/addVehicle/" method="POST">
                         {% csrf_token %}
                         <div class="form-group">
-                            <input type="text" name="name" placeholder="enter name" class="form-control">
+                            <input type="text" name="vehicle_number" placeholder="enter vehicle number"
+                                class="form-control">
                         </div>
                         <div class="form-group">
-                            <input type="text" name="email" placeholder="enter email" class="form-control">
+                            <input type="text" name="vehicle_type" placeholder="enter vehicle type"
+                                class="form-control">
+                        </div>
+                        <div class="form-group">
+                            <input type="text" name="vehicle_color" placeholder="enter vehicle color"
+                                class="form-control">
                         </div>
                         <br>
                         <div class="form-group">
-                            <button type="submit" class="btn btn-success btn-block">Add person</button>
+                            <button type="submit" class="btn btn-success btn-block">Add Vehicle</button>
                         </div>
                     </form>
                 </div>
@@ -60,26 +66,28 @@
             </div>
         </div>
         <div class="col-md-8">
-            <h2>List of person with traffic violations</h2>
+            <h2>List of Vehicle</h2>
             <div class="table-responsive">
                 <table class="table table-striped">
                     <thead>
                         <tr>
-                            <th>Name</th>
-                            <th>Email</th>
-                            <th>Actions</th>
+                            <th>Car Licence</th>
+                            <th>Car brand</th>
+                            <th>Car Color</th>
                         </tr>
                     </thead>
                     <tbody>
                         {% for data in dataset %}
                         <tr>
-                            <td>{{ data.name }}</td>
-                            <td>{{ data.email }}</td>
+                            <td>{{ data.vehicle_number }}</td>
+                            <td>{{ data.vehicle_type }}</td>
+                            <td>{{ data.vehicle_color }}</td>
                             <td>
-                                <a href="edit/{{data.id}}" class="btn btn-sm btn-block btn-primary">Edit</a>
+                                <a href="#" class="btn btn-sm btn-block btn-primary">Edit</a>
                             </td>
                             <td>
-                                <a href="delete/{{data.id}}" class="btn btn-sm btn-block btn-danger">Delete </a>
+                                <a href="{% url 'delete_vehicle' data.id %}"
+                                    class="btn btn-sm btn-block btn-danger">Delete </a>
                             </td>
                         </tr>
                         {% endfor %}
