--- a/traffic_violations/traffic_violations/templates/list_persons.html
+++ b/traffic_violations/traffic_violations/templates/list_persons.html
@@ -39,7 +39,7 @@
 <div class="container py-4">
     <div class="row">
         <div class="col-md-4">
-            <h2>Add person</h2>
+            <h2>Add new person</h2>
             <div class="card">
                 <div class="card body">
                     <form action="/addPerson/" method="POST">
