--- a/traffic_violations/traffic_violations/templates/list_official.html
+++ b/traffic_violations/traffic_violations/templates/list_official.html
@@ -45,14 +45,11 @@
                     <form action="/addOfficial/" method="POST">
                         {% csrf_token %}
                         <div class="form-group">
-                            <input type="text" name="name" placeholder="enter name" class="form-control">
-                        </div>
-                        <div class="form-group">
-                            <input type="text" name="number" placeholder="enter number" class="form-control">
+                            <input type="text" name="username" placeholder="enter name" class="form-control">
                         </div>
                         <br>
                         <div class="form-group">
-                            <button type="submit" class="btn btn-success btn-block">Add Official</button>
+                            <button disabled type="submit" class="btn btn-success btn-block">Add Official</button>
                         </div>
                     </form>
                 </div>
@@ -73,8 +70,8 @@
                     <tbody>
                         {% for data in dataset %}
                         <tr>
-                            <td>{{ data.name }}</td>
-                            <td>{{ data.id_number }}</td>
+                            <td>{{ data.username }}</td>
+                            <td>{{ data.id }}</td>
                             <td>
                                 <a href="{% url 'edit_official' data.id %}"
                                     class="btn btn-sm btn-block btn-primary">Edit</a>
