--- a/traffic_violations/traffic_violations/templates/update_official.html
+++ b/traffic_violations/traffic_violations/templates/update_official.html
@@ -46,12 +46,8 @@
                         {% csrf_token %}
                         <input type="hidden" name="id" value="{{official.id}}">
                         <div class="form-group">
-                            <input type="text" name="name" value="{{official.name}}" placeholder="enter name"
+                            <input type="text" name="name" value="{{official.username}}" placeholder="enter name"
                                 class="form-control">
-                        </div>
-                        <div class="form-group">
-                            <input type="text" name="id_number" value="{{official.id_number}}"
-                                placeholder="enter id number" class="form-control">
                         </div>
                         <br>
                         <div class="form-group">
